Bug 538082.  These asserts are asserting things that happen to not always be true.  r=dbaron